# C-vector-generator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
vector_src/: main.c
